--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -218,7 +218,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     background: white;
-    padding: 20px;
+    padding: 10px;
     border-radius: 8px;
     max-width: 600px;
     width: 90%;
@@ -253,9 +253,9 @@ body {
 }
 
 .config-button {
-    background-color: #333;
-    color: white;
-    padding: 10px 20px;
+    background-color: white;
+    
+    padding: 10px 10px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -268,7 +268,7 @@ body {
 }
 
 .config-button:hover {
-    background-color: #444;
+    background-color: #6b7280;
 }
 
 .config-button i {
