--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1331,13 +1331,13 @@ body {
     z-index: 1002;
 }
 
-.config-content {
+.tab-content .config-content {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: .5rem;
 }
 
-.config-content .config-button {
+.tab-content .config-content .config-button {
     background-color: white;
     aspect-ratio: 1;
     border: none;
@@ -1353,7 +1353,7 @@ body {
     transition: all 0.2s ease;
 }
 
-.config-content .room-header {
+.tab-content .config-content .room-header {
     grid-column: 1 / -1;
     font-size: 1.25rem;
     margin: 0 0 .75rem 0;
@@ -1363,6 +1363,6 @@ body {
     align-items: center;
 }
 
-.config-content .config-button i {
+.tab-content .config-content .config-button i {
 	padding: .3rem;
 }
