--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -463,6 +463,10 @@ body {
 	animation: highlight 1s ease;
 }
 
+#history-popup {
+	z-index: 1003;
+}
+
 .popup-overlay {
 	position: fixed;
 	top: 0;
